datafilter.yml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: datafilter-deployment
spec:
  selector:
    matchLabels:
      app: datafilter
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: datafilter
    spec:
      containers:
      - name: datafilter
        image: xiaowj1989/datafilter:latest
        ports:
        - containerPort: 3014
