savetomongodb.yml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: save-plc-data-to-mongodb
spec:
  selector:
    matchLabels:
      app: savetomongodb
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: savetomongodb
    spec:
      containers:
      - name: savetomongodb
        image: xiaowj1989/savetomongodb:latest
        ports:
        - containerPort: 3000
