thumbnail.yml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: thumbnail-deployment
spec:
  selector:
    matchLabels:
      app: thumbnail
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: thumbnail
    spec:
      containers:
      - name: thumbnail
        image: xiaowj1989/thumbnail:latest
        ports:
        - containerPort: 3000
