thumbnail_service.yml
apiVersion: v1
kind: Service
metadata:
  name: thumbnail-service
spec:
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
